# core

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  cfg.py  hello.py  main.py  models.py  pyproject.toml  script.sh  tmp.py
.github/workflows/: python-app.yml
api/: authorization.py
api/routes/: equipments.py  parts.py  security.py  users.py
api/schemas/: equipments.py  parts.py  users.py
classes/: Equipment.py  Report.py  SparePart.py  test_classes.py  tmp.py
database/: alembic.ini  service.py  sql.py  sqlite.db  test.db
database/migration/: env.py
database/migration/versions/: 5e9e25ea81e9_initial.py  note.txt
database/models/: abstraction.py  base.py  equipment.py  equipments.py  parts.py  users.py
exceptions/: ClassInitializationError.py
src/: main.py
src/api/: authorization.py  routes.py  routes_test.py  search.py  security.py
src/api/routes/: base.py  consumables.py  equipments.py  parts.py  search.py  security.py  users.py
src/api/schemas/: consumables.py  equipments.py  parts.py  tasks.py  users.py
src/classes/: Equipment.py  Report.py  SparePart.py  classes_test.py
src/database/: abstraction.py  models.py  service.py  sql.py  sqlite.db
src/database/crud/: consumables.py  equipments.py  parts.py
src/database/migration/: env.py
src/database/migration/versions/: 6fe99ae4bc06_initial.py  note.txt
src/database/models/: abstraction.py  consumables.py  equipments.py  parts.py  users.py
tests/: conftest.py  simple_test.py  test_api.py  test_consumables.py  test_database.py  test_equipment.py  test_equipments.py  test_json_model.py  test_models.py  test_parts.py  test_report.py  test_search.py  test_spare_parts.py  test_tasks.py  test_users.py
