[tool.poetry]
name = "The Core"
version = "0.1.0"
description = "The core of the software product on the backend side"
authors = ["Divider"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.1"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.6"
fastapi = "^0.75.0"
PyJWT = "^2.3.0"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
